--- a/wpfCalc/MainWindow.xaml
+++ b/wpfCalc/MainWindow.xaml
@@ -48,12 +48,12 @@
     <Grid>
         
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50"/>
-            <ColumnDefinition Width="50"/>
-            <ColumnDefinition Width="50"/>
-            <ColumnDefinition Width="50"/>
-            <ColumnDefinition Width="50"/>
-            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="19*"/>
             
             
         </Grid.ColumnDefinitions>
@@ -94,12 +94,12 @@
         <Button Grid.Column ="2" Grid.Row ="3" Content="9"/>
 
 
-        <Button Grid.Column ="3" Grid.Row ="1" Content="+" Background="LightCyan"/>
-        <Button Grid.Column ="3" Grid.Row ="2" Content="-" Background="LightCyan"/>
-        <Button Grid.Column ="3" Grid.Row ="3" Grid.ColumnSpan="2" Content="⚌" Background="LightCyan"/>
+        <Button Grid.Column ="3" Grid.Row ="1" Content="+" Background="White"/>
+        <Button Grid.Column ="3" Grid.Row ="2" Content="-" Background="White"/>
+        <Button Grid.Column ="3" Grid.Row ="3" Grid.ColumnSpan="2" Content="⚌" Background="White"/>
 
-        <Button Grid.Column ="4" Grid.Row ="1" Content="*" Background="LightCyan"/>
-        <Button Grid.Column ="4" Grid.Row ="2" Content="/" Background="LightCyan"/>
+        <Button Grid.Column ="4" Grid.Row ="1" Content="*" Background="White"/>
+        <Button Grid.Column ="4" Grid.Row ="2" Content="/" Background="White"/>
 
         <Button Grid.Column ="5" Grid.Row ="1" Content="⌧" Background="DarkRed" Foreground="White"/>
         
