--- a/wpfCalc/Views/CalculatorView.xaml
+++ b/wpfCalc/Views/CalculatorView.xaml
@@ -26,76 +26,78 @@
         </Grid.RowDefinitions>
 
         <TextBlock
+            x:Name="OutputTextBlock"
             Grid.ColumnSpan="6"
             Background="LightCyan"
             Foreground="Black"
-            Text="12345678910" />
+            Text="{Binding RecordOfSymbols,Mode=TwoWay}"
+        />
 
-        <Button Grid.Row="1" Content="1" />
-        <Button Grid.Row="2" Content="4" />
-        <Button Grid.Row="3" Content="7" />
-        <Button Grid.Row="4" Content="0" />
+        <Button Grid.Row="1" Content="1" Click="Button_Click_1number" />
+        <Button Grid.Row="2" Content="4" Click="Button_Click_4number" />
+        <Button Grid.Row="3" Content="7" Click="Button_Click_7number" />
+        <Button Grid.Row="4" Content="0" Click="Button_Click_0number" />
 
         <Button
             Grid.Row="1"
             Grid.Column="1"
-            Content="2" />
+            Content="2" Click="Button_Click_2number" />
         <Button
             Grid.Row="2"
             Grid.Column="1"
-            Content="5" />
+            Content="5" Click="Button_Click_5number" />
         <Button
             Grid.Row="3"
             Grid.Column="1"
-            Content="8" />
+            Content="8" Click="Button_Click_8number" />
         <Button
             Grid.Row="1"
             Grid.Column="2"
-            Content="3" />
+            Content="3" Click="Button_Click_3number" />
         <Button
             Grid.Row="2"
             Grid.Column="2"
-            Content="6" />
+            Content="6" Click="Button_Click_6number" />
         <Button
             Grid.Row="3"
             Grid.Column="2"
-            Content="9" />
+            Content="9" Click="Button_Click_9number" />
 
 
         <Button
             Grid.Row="1"
             Grid.Column="3"
             Background="White"
-            Content="+" />
+            Content="+" Click="Button_Click_PlusSymbol" />
         <Button
             Grid.Row="2"
             Grid.Column="3"
             Background="White"
-            Content="-" />
+            Content="-" Click="Button_Click_MinusSymbol" />
         <Button
             Grid.Row="3"
             Grid.Column="3"
             Grid.ColumnSpan="2"
             Background="White"
-            Content="⚌" />
+            Content="⚌" Click="Button_Click_SumSymbol" />
 
         <Button
             Grid.Row="1"
             Grid.Column="4"
             Background="White"
-            Content="*" />
+            Content="*" Click="Button_Click_MultiplySymbol" />
         <Button
             Grid.Row="2"
             Grid.Column="4"
             Background="White"
-            Content="/" />
+            Content="/" Click="Button_Click_DivideSymbol" />
 
         <Button
             Grid.Row="1"
             Grid.Column="5"
             Background="DarkRed"
             Content="⌧"
-            Foreground="White" />
+            Foreground="White" Click="Button_Click_DeleteSymbol" />
 
     </Grid>
 </UserControl>
